@@ -121,6 +121,8 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - deduplicate.sh: record crafted "library path" values in duplicates
       replacement to_files array.
     - deduplicate.sh: debug parse_otool_output fiercly for the time being.
+    - deduplicate.sh: prevent word splitting when parsing otool's output. We
+      want the raw bits.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
